fix bug format white space

--- a/src/ui/component/tooltip/index.css
+++ b/src/ui/component/tooltip/index.css
@@ -20,6 +20,7 @@
   margin-left: -10px;
   opacity: 0;
   transition: opacity 0.3s;
+  white-space: pre;
 }
 
 .tooltip-text-normal {
